--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+
+    .b-color{
+        @apply border-slate-700;
+    }
+
+    .bg{
+        @apply bg-slate-600 text-white;
+    }
+}
