--- a/src/app.css
+++ b/src/app.css
@@ -5,10 +5,10 @@
 @layer components{
 
     .b-color{
-        @apply border-slate-700;
+        @apply border-[#333444];
     }
 
     .bg{
-        @apply bg-slate-600 text-white;
+        @apply bg-[#181820] text-[#a8a8a8];
     }
 }
