--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
     }
 
     .bg{
-        @apply bg-[#181820] text-[#a8a8a8];
+        @apply bg-[#181820] text-[#f5f5f5];
     }
 }
 
@@ -19,5 +19,5 @@
 }
 
 .icons{
-    transition: background 350ms;
+    transition: background 550ms;
 }
